--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <li><a href="college_details_arizona.html">details arizona</a> - State of Arizona</li>
 <li><a href="college_details_colorado.html">details colorado</a> - State of Colorado</li>
 <li><a href="college_details_florida.html">details florida</a> - State of Florida</li>
+<li><a href="college_details_kipCamp23.html">details kip camp23</a> - Kip Camp 23</li>
     </ul>
   </body>
 </html>
