--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body>
     <ul>
 <li><a href="college_details_16.html">details 16</a> - player 16 list</li>
-<!-- <li><a href="college_details_kip.html">details k1</a> - k, list 1</li> -->
+<li><a href="college_details_16_emails.html">details 16 emails</a> - player 16 list for emails</li>
 <li><a href="college_details_spokane300.html">details spokane 300</a> - 300 mile radius of spokane</li>
 <li><a href="college_details_spokaneStates.html">details spokane States</a> - States near spokane</li>
 <li><a href="college_details_spokaneCoaches.html">details spokane Coaches</a> - Coaches attending spokane</li>
