--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <li><a href="college_details_spokaneCoaches.html">details spokane Coaches</a> - Coaches attending spokane</li>
 <li><a href="college_details_chicago300.html">details chicago 300</a> - 300 mile radius of chicago</li>
 <li><a href="college_details_chicago100.html">details chicago 100</a> - 100 mile radius of chicago</li>
+<li><a href="college_details_chicagoCoaches.html">details chicago Coaches</a> - Coaches attending chicago</li>
 <li><a href="college_details_reno300.html">details reno 300</a> - 300 mile radius of reno</li>
 <li><a href="college_details_arizona.html">details arizona</a> - State of Arizona</li>
 <li><a href="college_details_colorado.html">details colorado</a> - State of Colorado</li>
