--- a/college_details_spokaneCoaches.html
+++ b/college_details_spokaneCoaches.html
@@ -5,8 +5,8 @@
   </head>
   <body>
   <h2>spokaneCoaches</h2>
-  <div class="run-count">(school count: 23)</div>
-  <div class="run-date">(2023-03-19 8:2 am)</div>
+  <div class="run-count">(school count: 38)</div> 
+  <div class="run-date">(2023-03-20 4:38 pm)</div>
     <ul>
 <div x-data="{ openall: false }">
 <div x-data="{ openDI: true }">
