--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   </head>
   <body>
     <ul>
-<li><a href="college_details_16.html">details 16</a> - player 16 list</li>
-<li><a href="college_details_16_emails.html">details 16 emails</a> - player 16 list for emails</li>
+<!-- <li><a href="college_details_16.html">details 16</a> - player 16 list</li> -->
+<!-- <li><a href="college_details_16_emails.html">details 16 emails</a> - player 16 list for emails</li> -->
 <li><a href="college_details_spokane300.html">details spokane 300</a> - 300 mile radius of spokane</li>
 <li><a href="college_details_spokaneStates.html">details spokane States</a> - States near spokane</li>
 <li><a href="college_details_spokaneCoaches.html">details spokane Coaches</a> - Coaches attending spokane</li>
@@ -13,10 +13,11 @@
 <li><a href="college_details_chicago100.html">details chicago 100</a> - 100 mile radius of chicago</li>
 <li><a href="college_details_chicagoCoaches.html">details chicago Coaches</a> - Coaches attending chicago</li>
 <li><a href="college_details_reno300.html">details reno 300</a> - 300 mile radius of reno</li>
+<li><a href="college_details_aauCoaches.html">details AAU Coaches</a> - Coaches attending AAU</li>
 <li><a href="college_details_arizona.html">details arizona</a> - State of Arizona</li>
 <li><a href="college_details_colorado.html">details colorado</a> - State of Colorado</li>
 <li><a href="college_details_florida.html">details florida</a> - State of Florida</li>
-<li><a href="college_details_kipcamp23.html">details kip camp23</a> - Kip Camp 23</li>
+<!-- <li><a href="college_details_kipcamp23.html">details kip camp23</a> - Kip Camp 23</li> -->
     </ul>
   </body>
 </html>
