--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <li><a href="college_details_colorado.html">details colorado</a> - State of Colorado</li>
 <li><a href="college_details_florida.html">details florida</a> - State of Florida</li>
 <!-- <li><a href="college_details_kipcamp23.html">details kip camp23</a> - Kip Camp 23</li> -->
+<li><a href="https://sportsrecruits.com/athletic-scholarships/womens-volleyball">all states map</a> - All States</li>
     </ul>
   </body>
 </html>
