--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
     <ul>
 <!-- <li><a href="college_details_16.html">details 16</a> - player 16 list</li> -->
 <!-- <li><a href="college_details_16_emails.html">details 16 emails</a> - player 16 list for emails</li> -->
-<li><a href="college_details_spokane300.html">details spokane 300</a> - 300 mile radius of spokane</li>
-<li><a href="college_details_spokaneStates.html">details spokane States</a> - States near spokane</li>
+<!-- <li><a href="college_details_spokane300.html">details spokane 300</a> - 300 mile radius of spokane</li> -->
+<!-- <li><a href="college_details_spokaneStates.html">details spokane States</a> - States near spokane</li> -->
 <li><a href="college_details_spokaneCoaches.html">details spokane Coaches</a> - Coaches attending spokane</li>
-<li><a href="college_details_chicago300.html">details chicago 300</a> - 300 mile radius of chicago</li>
-<li><a href="college_details_chicago100.html">details chicago 100</a> - 100 mile radius of chicago</li>
+<!-- <li><a href="college_details_chicago300.html">details chicago 300</a> - 300 mile radius of chicago</li> -->
+<!-- <li><a href="college_details_chicago100.html">details chicago 100</a> - 100 mile radius of chicago</li> -->
 <li><a href="college_details_chicagoCoaches.html">details chicago Coaches</a> - Coaches attending chicago</li>
 <li><a href="college_details_reno300.html">details reno 300</a> - 300 mile radius of reno</li>
 <li><a href="college_details_aauCoaches.html">details AAU Coaches</a> - Coaches attending AAU</li>
 <li><a href="college_details_arizona.html">details arizona</a> - State of Arizona</li>
 <li><a href="college_details_colorado.html">details colorado</a> - State of Colorado</li>
 <li><a href="college_details_florida.html">details florida</a> - State of Florida</li>
-<li><a href="college_details_kplist051223.html">details KP List</a> - KP List 051223</li>
-<li><a href="college_details_coachesPollDII.html">details coaches poll DII</a> - Coaches poll DII 12/5/2022</li>
+<li><a href="college_details_texas.html">details texas</a> - State of Texas</li>
+<!-- <li><a href="college_details_kplist051223.html">details KP List</a> - KP List 051223</li> -->
+<!-- <li><a href="college_details_coachesPollDII.html">details coaches poll DII</a> - Coaches poll DII 12/5/2022</li> -->
 <li><a href="college_details_2023FinalsDII_8.html">2023 Finals DII</a>2023 Finals DII, top 8</li>
 <li><a href="college_details_2023FinalsDII_16.html">2023 Finals DII</a>2023 Finals DII, top 16</li>
 <li><a href="college_details_2023FinalsDII_32.html">2023 Finals DII</a>2023 Finals DII, top 32</li>
