--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
 <li><a href="college_details_texas.html">details texas</a> - State of Texas</li>
 <!-- <li><a href="college_details_kplist051223.html">details KP List</a> - KP List 051223</li> -->
 <!-- <li><a href="college_details_coachesPollDII.html">details coaches poll DII</a> - Coaches poll DII 12/5/2022</li> -->
-<li><a href="college_details_2023FinalsDII_8.html">2023 Finals DII</a>2023 Finals DII, top 8</li>
-<li><a href="college_details_2023FinalsDII_16.html">2023 Finals DII</a>2023 Finals DII, top 16</li>
-<li><a href="college_details_2023FinalsDII_32.html">2023 Finals DII</a>2023 Finals DII, top 32</li>
-<li><a href="college_details_2023FinalsDII_64.html">2023 Finals DII</a>2023 Finals DII, all 64</li>
+<li><a href="college_details_2023FinalsDII_8.html">2023 Finals DII</a> - 2023 Finals DII, top 8</li>
+<li><a href="college_details_2023FinalsDII_16.html">2023 Finals DII</a> - 2023 Finals DII, top 16</li>
+<li><a href="college_details_2023FinalsDII_32.html">2023 Finals DII</a> - 2023 Finals DII, top 32</li>
+<li><a href="college_details_2023FinalsDII_64.html">2023 Finals DII</a> - 2023 Finals DII, all 64</li>
+<li><a href="college_details_klist.html">klist again</a> - klist again</li>
 <!-- <li><a href="college_details_kipcamp23.html">details kip camp23</a> - Kip Camp 23</li> -->
 <li><a href="https://sportsrecruits.com/athletic-scholarships/womens-volleyball">all states map</a> - All States</li>
     </ul>
