--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <!-- <li><a href="college_details_chicago100.html">details chicago 100</a> - 100 mile radius of chicago</li> -->
 <li><a href="college_details_chicagoCoaches.html">details chicago Coaches</a> - Coaches attending chicago</li>
 <li><a href="college_details_reno300.html">details reno 300</a> - 300 mile radius of reno</li>
-<li><a href="college_details_aauCoaches.html">details AAU Coaches</a> - Coaches attending AAU</li>
+<li><a href="college_details_aauCoaches.html">details AAU 2023 Coaches</a> - Coaches attending AAU 2023</li>
+<li><a href="college_details_usavCoaches.html">details USAV 2023 Coaches</a> - Coaches attending USAV 2023</li>
 <li><a href="college_details_arizona.html">details arizona</a> - State of Arizona</li>
 <li><a href="college_details_colorado.html">details colorado</a> - State of Colorado</li>
 <li><a href="college_details_florida.html">details florida</a> - State of Florida</li>
